.metadata/.plugins/org.eclipse.cdt.ui/test2.build.log
16:32:36 **** Incremental Build of configuration Release for project test2 ****
make all 
Building file: ../src/BlockSplit.cpp
Invoking: GCC C++ Compiler
g++  -pthread -std=c++11 -I"/n/no_backup/park/elim/kyu/eclipse/workspace/bamtools/src" -I/opt/boost-1.57.0/include -I/usr/local/Cellar/boost/1.63.0/include -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BlockSplit.d" -MT"src/BlockSplit.o" -o "src/BlockSplit.o" "../src/BlockSplit.cpp"
../src/BlockSplit.cpp: In static member function ‘static bool data::BlockSplit::create_bfi_block_files(std::string&, std::vector<long int>&)’:
../src/BlockSplit.cpp:84:51: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int64_t i = 0; i < block_boundaries.size() - 1; ++i) {
                                                   ^
../src/BlockSplit.cpp: In static member function ‘static bool data::BlockSplit::create_bni(std::string&, const int64_t&)’:
../src/BlockSplit.cpp:132:17: error: ‘class BamTools::BamReader’ has no member named ‘tellg’
  cout << reader.tellg() << endl;
                 ^
../src/BlockSplit.cpp:134:36: error: ‘class BamTools::BamReader’ has no member named ‘tellg’
  block_boundaries.push_back(reader.tellg());
                                    ^
../src/BlockSplit.cpp:153:27: error: ‘class BamTools::BamReader’ has no member named ‘tellg’
   al_prev_offset = reader.tellg();
                           ^
../src/BlockSplit.cpp: In static member function ‘static bool data::BlockSplit::create_bni_block_files(std::string&, std::vector<long int>&)’:
../src/BlockSplit.cpp:227:11: error: ‘class BamTools::BamReader’ has no member named ‘seekg’
    reader.seekg(block_boundaries[i]);
           ^
../src/BlockSplit.cpp:233:15: error: ‘class BamTools::BamReader’ has no member named ‘tellg’
    if (reader.tellg() >= block_boundaries[i+1] || reader.tellg() < 0) {
               ^
../src/BlockSplit.cpp:233:58: error: ‘class BamTools::BamReader’ has no member named ‘tellg’
    if (reader.tellg() >= block_boundaries[i+1] || reader.tellg() < 0) {
                                                          ^
../src/BlockSplit.cpp:218:20: warning: unused variable ‘header’ [-Wunused-variable]
   const SamHeader& header = reader.GetHeader();
                    ^
../src/BlockSplit.cpp: In static member function ‘static bool data::BlockSplit::create_bni(std::string&, const int64_t&)’:
../src/BlockSplit.cpp:170:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
In file included from /opt/boost-1.57.0/include/boost/filesystem/path_traits.hpp:23:0,
                 from /opt/boost-1.57.0/include/boost/filesystem/path.hpp:25,
                 from /opt/boost-1.57.0/include/boost/filesystem.hpp:16,
                 from ../src/BlockSplit.hpp:19,
                 from ../src/BlockSplit.cpp:8:
/opt/boost-1.57.0/include/boost/system/error_code.hpp: At global scope:
/opt/boost-1.57.0/include/boost/system/error_code.hpp:221:36: warning: ‘boost::system::posix_category’ defined but not used [-Wunused-variable]
     static const error_category &  posix_category = generic_category();
                                    ^
/opt/boost-1.57.0/include/boost/system/error_code.hpp:222:36: warning: ‘boost::system::errno_ecat’ defined but not used [-Wunused-variable]
     static const error_category &  errno_ecat     = generic_category();
                                    ^
/opt/boost-1.57.0/include/boost/system/error_code.hpp:223:36: warning: ‘boost::system::native_ecat’ defined but not used [-Wunused-variable]
     static const error_category &  native_ecat    = system_category();
                                    ^
make: *** [src/BlockSplit.o] Error 1

16:32:41 Build Finished (took 4s.343ms)

